--- a/tests/tests.html
+++ b/tests/tests.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<script src="../node_modules/mocha/mocha.js"></script>
 		<link rel="stylesheet" href="../node_modules/mocha/mocha.css" />
-		<script src="../papaparse.js"></script>
+		<script src="../lib/papaparse.js"></script>
 		
 		<script src="../node_modules/chai/chai.js"></script>
 
