Even better back compat

--- a/player/player.html
+++ b/player/player.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="player.css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-		<script src="../papaparse.umd.js"></script>
+		<script src="../papaparse.js"></script>
 		<script src="player.js"></script>
 	</head>
 	<body>
